<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ThanhToanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        >

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Food"
            android:layout_weight="1"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"

            />

        <TextView
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"
            android:layout_weight="1"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            />

        <TextView
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gia"
            android:layout_weight="1"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <GridView
        tools:listitem="@layout/item_thanhtoan"
        android:id="@+id/gvThanhToan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:numColumns="1"
        >

    </GridView>

    <TextView
        android:id="@+id/txtTongTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tongTien"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnThanhToan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_bg_dongy"
            android:text="@string/thanhToan"
            android:layout_margin="@dimen/_10sdp"
            />

        <Button
            android:id="@+id/btnHuyThanhToan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/huy"
            android:backgroundTint="@color/color_bg_huy"
            android:layout_margin="@dimen/_10sdp"
            />

    </LinearLayout>

</LinearLayout>